# EnglishApp

./: .env.example  .gitignore  APP_UI_ARCH.md  LICENSE  REMEDIATION_PLAN.md  第三方系统接口规范.md  组件安装说明.md
EnglishAPP/: .env.example  .gitignore  API参考资料.md  APP_UI_ARCH.md  BACKEND_IMPL_SPEC.md  (+7 more)
EnglishAPP/backend/: .env.example  alembic.ini  pyproject.toml
EnglishAPP/backend/alembic/: env.py
EnglishAPP/backend/alembic/versions/: 0003_sentence_analyses.py  0005_analytics_events.py  0007_article_paragraph_translations.py
EnglishAPP/backend/app/: main.py
EnglishAPP/backend/app/core/: auth.py  config.py  pagination.py  response.py  router.py  security.py
EnglishAPP/backend/app/db/: article_content_sync.py  demo_content_bank.py  init_db.py  models.py
EnglishAPP/backend/app/modules/: __init__.py
EnglishAPP/backend/app/modules/admin/: router.py
EnglishAPP/backend/app/modules/analysis/: router.py
EnglishAPP/backend/app/modules/analytics/: router.py
EnglishAPP/backend/app/modules/auth/: router.py
EnglishAPP/backend/app/modules/content/: router.py
EnglishAPP/backend/app/modules/home/: router.py
EnglishAPP/backend/app/modules/me/: router.py
EnglishAPP/backend/app/modules/quiz/: router.py
EnglishAPP/backend/app/modules/reading/: router.py
EnglishAPP/backend/app/modules/users/: router.py
EnglishAPP/backend/app/modules/vocab/: router.py
EnglishAPP/backend/app/modules/web_articles/: router.py
EnglishAPP/backend/app/modules/words/: router.py
EnglishAPP/backend/app/tasks/: audio_tasks.py
EnglishAPP/backend/tests/: test_health.py  test_seed_catalog.py
(+88 files in other folders)
